# openevals

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  background.js  content.css  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  metric_proposal.md
.github/workflows/: cd.yml  ci.yml  release.yml
dashboard/: index.html
infra/monitoring/: alert_rules.yml  prometheus.yml
openevals/: __init__.py  config.py  core.py  exceptions.py  types.py
openevals/api/: main.py
openevals/api/middleware/: auth.py  logging.py
openevals/api/routers/: benchmark.py  bulk.py  datasets.py  evaluate.py  health.py  leaderboard.py  reports.py  webhooks.py
openevals/cli/: main.py
openevals/db/: connection.py  models.py
openevals/metrics/: __init__.py  answer_similarity.py  base.py  bias_detection.py  citation_accuracy.py  coherence.py  conciseness.py  context_precision.py  context_recall.py  faithfulness.py  hallucination.py  latency.py  registry.py  relevance.py  toxicity.py
openevals/observability/: logging.py  metrics.py
openevals/pipeline/: aggregator.py  batcher.py  orchestrator.py  retry.py  validator.py  worker_pool.py
openevals/stats/: agreement.py  bootstrap.py  calibration.py  drift.py  significance.py
server/: main.py  render.yaml  requirements.txt
tests/: conftest.py  scoring.test.js
tests/integration/: test_api_evaluate.py
tests/unit/: test_core.py
tests/unit/metrics/: test_citation_accuracy.py  test_conciseness.py  test_latency.py
tests/unit/pipeline/: test_batcher.py  test_validator.py
tests/unit/stats/: test_bootstrap.py  test_drift.py  test_significance.py
