[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openevals"
version = "0.1.0"
description = "Open-source LLM evaluation framework with 12+ automated metrics"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "detoxify>=0.5.2",
    "ragas>=0.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "prometheus-client>=0.20.0",
    "redis>=5.0.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "datasets>=2.19.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "spacy>=3.7.0",
    "langfuse>=2.36.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.4",
    "weasyprint>=62.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.103.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "flake8>=7.0.0",
    "locust>=2.29.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
openevals = "openevals.cli.main:app"

[project.entry-points."openevals.metrics"]
faithfulness = "openevals.metrics.faithfulness:FaithfulnessMetric"
relevance = "openevals.metrics.relevance:RelevanceMetric"
hallucination = "openevals.metrics.hallucination:HallucinationMetric"
toxicity = "openevals.metrics.toxicity:ToxicityMetric"
latency = "openevals.metrics.latency:LatencyMetric"
coherence = "openevals.metrics.coherence:CoherenceMetric"
context_precision = "openevals.metrics.context_precision:ContextPrecisionMetric"
context_recall = "openevals.metrics.context_recall:ContextRecallMetric"
answer_similarity = "openevals.metrics.answer_similarity:AnswerSimilarityMetric"
conciseness = "openevals.metrics.conciseness:ConcisenessMetric"
citation_accuracy = "openevals.metrics.citation_accuracy:CitationAccuracyMetric"
bias_detection = "openevals.metrics.bias_detection:BiasDetectionMetric"

[tool.hatch.version]
path = "openevals/__init__.py"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=openevals --cov-report=html --cov-report=term-missing"
